2010-07-07  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to #14845: No preview images with referenced files anymore (thanks to Stefan Galinski)

2010-07-06  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14845: Bug: Filelist module reports "type" of files also for directories  (thanks to Caspar Stuebs and Andy Grunwald)

2010-07-06  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14967: [Caching framework] fileBackend testcase removes files in /sbin

2010-06-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14905: htmlArea RTE: Image dialogue shows tab "Current picture" when there is no current image

2010-06-25  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14866: Quicktime audio format m4a isn't supported

2010-06-21  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14601: Date picker does not work on IRRE elements (Thanks to Steffen Ritter)

2010-06-21  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8893: eval "timesec" sets seconds to zero (Thanks to Ralf Hettinger and Andy Grunwald)

2010-06-21  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #14808 tceforms.js slows down performance of IE dramatically
	* Fixed bug #14800: JS errors prevent JS pased popups from working in IE (Thanks to Jo Hasenau)
	* Fixed bug #14808 tceforms.js slows down performance of IE dramatically (Thanks to Jo Hasenau)
	* Fixed bug #11543: Shortcuts broken if current directory is not in include path (Thanks to Mads Chr. Olesen)

2010-06-19 Francois Suter  <francois@typo3.org>

	* Fixed bug: #13315: Scheduler: Failed status hides other statuses
	* Fixed bug: #14184: Scheduler: Handle invalid serialized exception objects

2010-06-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14464: htmlArea RTE: Type of block accumulation if the block is manually selected in Safari

2010-06-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug ##14436: External links are prepended with current domain by RTE transformation
