@@ -735,7 +735,7 @@ class t3lib_extFileFunctions extends t3lib_basicFileFunctions	{
 											$this->writelog(8,0,1,'File created: "%s"',Array($fI['file']));
 											return $theNewFile;
 										} else $this->writelog(8,1,100,'File "%s" was not created! Write-permission problem in "%s"?',Array($fI['file'], $theTarget));
-									} else $this->writelog(8,1,107,'Fileextension "%s" is not a textfile format! (%s)',Array($fI['fileext'], $extList));
+									} else $this->writelog(8,1,107,'File extension "%s" is not a textfile format! (%s)',Array($fI['fileext'], $extList));
 								} else $this->writelog(8,1,106,'Extension of file name "%s" was not allowed!',Array($fI['file']));
 							} else $this->writelog(8,1,101,'File "%s" existed already!',Array($theNewFile));
 						} else $this->writelog(8,1,102,'Destination path "%s" was not within your mountpoints!',Array($theTarget.'/'));
@@ -770,7 +770,7 @@ class t3lib_extFileFunctions extends t3lib_basicFileFunctions	{
 								$this->writelog(9,0,1,'File saved to "%s", bytes: %s, MD5: %s ',Array($fileInfo['file'],@filesize($theTarget),md5($content)));
 								return TRUE;
 							} else $this->writelog(9,1,100,'File "%s" was not saved! Write-permission problem in "%s"?',Array($theTarget,$fileInfo['path']));
-						} else $this->writelog(9,1,102,'Fileextension "%s" is not a textfile format! (%s)',Array($fI['fileext'], $extList));
+						} else $this->writelog(9,1,102,'File extension "%s" is not a textfile format! (%s)',Array($fI['fileext'], $extList));
 					} else $this->writelog(9,1,103,'Extension of file name "%s" was not allowed!',Array($fI['file']));
 				} else $this->writelog(9,1,104,'You are not allowed to edit files!','');
 			} else $this->writelog(9,1,121,'Destination path "%s" was not within your mountpoints!',Array($fileInfo['path']));
@@ -844,7 +844,7 @@ class t3lib_extFileFunctions extends t3lib_basicFileFunctions	{
 								return TRUE;
 							} else $this->writelog(7,1,100,'File "%s" or destination "%s" was not within your mountpoints!',Array($theFile,$theDest));
 						} else $this->writelog(7,1,101,'You don\'t have full access to the destination directory "%s"!',Array($theDest));
-					} else $this->writelog(7,1,102,'Fileextension is not "zip"','');
+					} else $this->writelog(7,1,102,'File extension is not "zip"','');
 				} else $this->writelog(7,1,103,'You are not allowed to unzip files','');
 			} else $this->writelog(7,2,104,'Destination "%s" was not a directory',Array($cmds['target']));
 		} else $this->writelog(7,2,105,'The file "%s" did not exist!',Array($theFile));
